# thoughtful-ai-example

./: .env.sample  README.md  data_schema.json  main.py  pyproject.toml
faiss_index_react/: index.faiss  index.pkl
